<resources>
    <string name="app_name">喔哦</string>
    <string name="menu_one">首页</string>
    <string name="menu_two">发现</string>
    <string name="menu_three">帮助</string>
    <string name="menu_four">关注</string>
    <string name="menu_five">消息</string>
    <string name="menu_six">设置</string>
    <string name="menu_seven">关于</string>
    <string name="menu_eight">其他</string>
    <string name="state_one">空闲</string>
    <string name="state_two">忙碌</string>
    <string name="state_three">失联</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_menu">搜索</string>
    <string name="message_menu">消息</string>
    <string name="set_menu">设置</string>
    <string name="send_menu">发布</string>

    <string name="hint_title">标题</string>
    <string name="hint_content">请描述一下详情内容</string>
    <string name="take_picture">拍照</string>
    <string name="select_local_picture">选择本地图片</string>
    <string name="cancel">取消</string>
    <string name="comment">评论</string>

    <string name="help_people">喔哦</string>

</resources>
