<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/SUB_GRAY"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:contentInsetStart="40dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发布需求"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/WHITE"
            />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/SUB_GRAY"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/WHITE"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/help_body"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="top"
                    android:hint="@string/hint_content"
                    app:met_hideUnderline="true" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="110dp"
                    android:scrollbars="none"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/WHITE"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/WHITE"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/label"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/SUB_BLACK"
                        android:text="标签："
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/GRAY"
                        android:text="请选择相应标签"
                        android:textSize="16sp"/>
                </LinearLayout>

                <com.example.barry215.woo.FlowTagLibrary.FlowTagLayout
                    android:id="@+id/flow_layout"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/GRAY"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/jiage"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/SUB_BLACK"
                        android:text="酬金："
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/ed_reward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="请输入价格（单位元）"
                        android:textSize="16sp"
                        android:inputType="number"
                        android:backgroundTint="@android:color/transparent"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/GRAY"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/timer"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/SUB_BLACK"
                        android:text="截止时间："
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="请选择一个时间"
                        android:textSize="16sp"
                        android:editable="false"
                        android:backgroundTint="@android:color/transparent"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="发布即表示你同意"
                        android:textColor="@color/GRAY"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="《喔哦发布规则》"
                        android:textColor="@color/SUB_BLACK"
                        android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/edit_photo_fullscreen_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55000000"
            android:clickable="true"
            android:onClick="hideEditPhotoLayout"
            android:focusable="true"
            android:visibility="gone" >

            <RelativeLayout
                android:id="@+id/edit_photo_outer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/edit_photo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/take_picture_layout_round_corner_bg"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/take_picture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/take_picture"
                        android:textColor="@color/TRAN_BLUE"
                        android:textSize="20sp" />

                    <View style="@style/horizontal_divider" >
                    </View>

                    <TextView
                        android:id="@+id/select_local_picture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/select_local_picture"
                        android:textColor="@color/TRAN_BLUE"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_photo_layout"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/video_order_layout_round_corner_bg"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/cancel"
                        android:textColor="@color/TRAN_BLUE"
                        android:clickable="true"
                        android:onClick="hideEditPhotoLayout"
                        android:textSize="20sp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>